test/sema/exercise/struct_member_multiple_initialization.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {
  x: number,
}

fn main(): void {
  let x = S {
    x: 0,
    x: 1,
    // CHECK: [[# @LINE - 1 ]]:5: error: field 'x' is already initialized
    x: 2,
    // CHECK: [[# @LINE - 1 ]]:5: error: field 'x' is already initialized
  };
}
